src/components/Resources/Blogs/Blog.css
/*@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');*/

.blogs__container {
    display: flex;
    flex-direction: column;
    justify-content: left;
    text-align: left;
    height: 100%;
    width: 400px;
    border-radius: 10px;
    background-color: #0d1117;
    margin: 20px 20px;
    padding: 15px 20px;
}
.styles{
    text-decoration: none;
    text-underline: none;
}

.blogs__container__title {
    margin: 10px 0;
    padding: 10px 0;
}

.blogs__container__title h1 {
    font-size: 1.8rem;
    font-weight: 600;
}

.blogs__container__title h6 {
    font-size: 0.9rem;
    font-weight: 400;
}

.tags {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin: 10px 0;
    padding: 10px 0;
}

.tag {
    margin: 0 5px;
    padding: 10px 15px;
    border-radius: 5px;
    background-color: #1f6feb;
    color: #fff;
    font-size: 0.8rem;
    font-weight: 400;
}

.AllBlogs {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

.AllBlogs a {
    color: #cecac3;
}

.blogImg {
    margin-bottom: 9px;
}

.viewBlog {
    display: flex;
    flex-direction: column;
    padding: 50px 300px;
    padding-top: 0;
    align-items: center;
    justify-content: space-between;
    font-family: 'Montserrat', sans-serif;
}

.viewBlog > * {
    margin: 10px 0;
}

.viewBlog p {
    text-align: left;
    padding: 0 50px;
    white-space: pre-line;
    font-size: 20px;
}

.viewBlog img {
    margin-top: 0;
}

